--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.3",
     "use-debounce": "^10.0.4",
     "zustand": "^5.0.3"
   },
